# C-WorkingProjects

./: README.md
HM5/stat/: CMakeLists.txt  max.h  mean.h  min.h  pct.cpp  pct.h  statistics.cpp  statistics.h  std.cpp  std.h
HW1/: script.txt
HW2/: script.txt
HW2/src/: CMakeLists.txt  move_me_out.cpp  move_me_out.h
HW3/src/: CMakeLists.txt  high_scores.cpp  high_scores.txt  theGame.cpp  theGame.h
HW4/hm4otusbasic/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Dust.hpp  Physics.cpp  Physics.hpp  Point.hpp  World.cpp  World.hpp
HW4/hm4otusbasic/black_box/: Application.cpp  View.cpp
